fix: z-index fixed

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,15 @@ table tr td {
   background-position: center;
 }
 
+.leaflet-pane {
+  z-index: 3 !important;
+}
+
+.leaflet-top,
+.leaflet-bottom {
+  z-index: 4 !important;
+}
+
 @keyframes rotate-scale-up {
   0% {
     transform: scale(1) rotateZ(0);
